@@ -3,6 +3,9 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Updated Core::IRC and all modules to obey the updated API.
+    * Deleted shelp from cmd_add, replaced with privilege. Renamed
+      fhelp to help.
     * If fantasy HELP is used, only display fantasy commands, if
       private HELP is used, only display private commands.
     * Fixed cmd_add syntax. Correct format: name, level, short help,
